# Microprocessors-Raspberry-Pi-Pico

assignments/assign01/: assign01.S  assign01.c
assignments/assign02/: assign02.c
examples/hello_c/: hello_c.c
examples/ws2812_rgb/: ws2812_rgb.c
labs/: CMakeLists.txt
labs/lab01/: CMakeLists.txt  lab01.c
labs/lab02/: diagram.json  lab02.c
labs/lab03/: diagram.json  lab03.S
labs/lab04/: lab04_rslt.txt
labs/lab05/: lab05.S
labs/lab06/: CMakeLists.txt  lab06.c  lab06_rslt.txt
labs/lab07/: Lab07.xlsx  lab07.c  lab07_rslt.docx
labs/lab08/: lab08.docx  ~$lab08.docx  ~WRL0474.tmp
labs/test_lab05/: CMakeLists.txt  test_lab05.S
